Bug 314784 - digikam 3.0 breaks during build
Summary: digikam 3.0 breaks during build
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Portability-Compilation (other bugs)
Version First Reported In: 3.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 18:23 UTC by Philip Johnsson
Modified: 2017-08-19 21:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Johnsson 2013-02-09 18:23:56 UTC
Trying to build Digikam 3.0 on Ubuntu 12.04 with KDE 4.10 and imgurexport breaks during build. No problem building imgurexport in Digikam 3.0 rc. In both cases I build against todays kqoauth 0.97.0 from git.

Could this been introduced by the "constify and polish" fixes in Revision 154b11ba?

Reproducible: Always

Actual Results:  
Build breaks.

Expected Results:  
Successful build.

Break log:
0/obj-x86_64-linux-gnu/extra/libkdcraw -I/tmp/buildd/digikam-3.0.0/extra/libkipi -I/tmp/buildd/digikam-3.0.0/obj-x86_64-linux-gnu/extra/libkipi -I/usr/include/opencv -I/usr/include/KDE -I/usr/include/qt4/phonon -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtHelp -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4 -I/usr/include/QtKOAuth    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/kipiplugin_imgurexport.dir/imgurtalkerauth.cpp.o -c /tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp: In member function 'void KIPIImgurExportPlugin::ImgurTalkerAuth::imageUpload(const KUrl&)':
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp:136:5: error: 'state' was not declared in this scope
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp: In member function 'void KIPIImgurExportPlugin::ImgurTalkerAuth::slotOAuthLogin()':
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp:179:5: error: 'state' was not declared in this scope
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp: In member function 'void KIPIImgurExportPlugin::ImgurTalkerAuth::slotContinueUpload(bool)':
/tmp/buildd/digikam-3.0.0/extra/kipi-plugins/imgurexport/imgurtalkerauth.cpp:282:17: error: 'queue' was not declared in this scope
make[3]: *** [extra/kipi-plugins/imgurexport/CMakeFiles/kipiplugin_imgurexport.dir/imgurtalkerauth.cpp.o] Error 1
make[3]: Leaving directory `/tmp/buildd/digikam-3.0.0/obj-x86_64-linux-gnu'
make[2]: *** [extra/kipi-plugins/imgurexport/CMakeFiles/kipiplugin_imgurexport.dir/all] Error 2
make[2]: Leaving directory `/tmp/buildd/digikam-3.0.0/obj-x86_64-linux-gnu'
make[1]: *** [all] Error 2
make[1]: Leaving directory `/tmp/buildd/digikam-3.0.0/obj-x86_64-linux-gnu'
dh_auto_build: make -j1 returned exit code 2
make: *** [build] Error 2
dpkg-buildpackage: error: debian/rules build gave error exit status 2
Comment 1 Marius Orcsik 2013-02-09 18:48:13 UTC
Yes I think so.

I have made some changes to compile it at least, but in the meanwhile there was a patch that would have fixed it. I will apply my changes after it gets pushed to master.
Comment 2 Philip Johnsson 2013-02-09 19:14:37 UTC
(In reply to comment #1)
> Yes I think so.
> 
> I have made some changes to compile it at least, but in the meanwhile there
> was a patch that would have fixed it. I will apply my changes after it gets
> pushed to master.

I solved it by not setting the QTKOAUTH_INCLUDE_DIR parameter for cmake that I had to do when building Digikam 3.0 rc. If I let cmake find QTKOAUTH_INCLUDE_DIR by itself  with Digikam 3.0 it now works during the whole build...
Comment 3 Ananta Palani 2013-02-09 23:11:28 UTC
Git commit 5de746daaf06120307b2fdecb26b4ce07c81fba1 by Ananta Palani.
Committed on 10/02/2013 at 00:11.
Pushed by palani into branch 'master'.

Fix compilation

M  +5    -5    imgurexport/imgurtalkerauth.cpp

http://commits.kde.org/kipi-plugins/5de746daaf06120307b2fdecb26b4ce07c81fba1
Comment 4 Philip Johnsson 2013-02-10 15:06:42 UTC
(In reply to comment #3)
> Git commit 5de746daaf06120307b2fdecb26b4ce07c81fba1 by Ananta Palani.
> Committed on 10/02/2013 at 00:11.
> Pushed by palani into branch 'master'.
> 
> Fix compilation
> 
> M  +5    -5    imgurexport/imgurtalkerauth.cpp
> 
> http://commits.kde.org/kipi-plugins/5de746daaf06120307b2fdecb26b4ce07c81fba1

Now it builds just fine with the patch. Thanks.