Fix compilation

BUG: 314784